Name:                HLearn-algebra
Version:             0.1.2.1
Synopsis:            Algebraic foundation for homomorphic learning
Description:         This module contains the algebraic basis for the HLearn library.  It is separated out in it's own library because it contains routines that may be useful to others.  In particular, it contains methods for automatically converting algorithms into online/parallel versions, and its structure is slightly more modular (although much less complete) than other algebra packages.
Category:            Data Mining, Machine Learning
License:             GPL
--License-file:        LICENSE
Author:              Mike izbicki
Maintainer:          mike@izbicki.me
Build-Type:          Simple
Cabal-Version:       >=1.8
homepage:            http://github.com/mikeizbicki/HLearn/
bug-reports:         http://github.com/mikeizbicki/HLearn/issues

Library
    Build-Depends:      
        base                >= 3 && < 5,
        ConstraintKinds     >= 0.0.1,
        
        semigroups          >= 0.8,
        parallel            >= 3.2,
        deepseq             >= 1.3,
        containers          >= 0.5
    hs-source-dirs:     src
    ghc-options:        -rtsopts -auto-all -caf-all -O2 
    Exposed-modules:
        HLearn.Algebra
        HLearn.Algebra.Functions
        HLearn.Algebra.Models
        HLearn.Algebra.Models.Lame
        HLearn.Algebra.Morphism
        HLearn.Algebra.Structures.Groups
        HLearn.Algebra.Structures.Modules
        HLearn.Algebra.Structures.Free.RegSG2Group
        HLearn.Algebra.Structures.Triangles