Name:                HLearn-classification
Version:             1.0.0
Description:         This module is for unsupervised, supervised, and semi-supervised classification tasks.  It is in desperate need of documentation and refactoring.
Category:            Data Mining, Machine Learning
License:             BSD3
--License-file:        LICENSE
Author:              Mike izbicki
Maintainer:          mike@izbicki.me
Build-Type:          Simple
Cabal-Version:       >=1.8
homepage:            http://github.com/mikeizbicki/HLearn/
bug-reports:         http://github.com/mikeizbicki/HLearn/issues

Library
    Build-Depends:      
        base                    >= 3 && < 5,
        HLearn-algebra          >= 1.0.0,
        HLearn-distributions    >= 1.0.0,
        ConstraintKinds         >= 0.0.1,

        -- are these really necessary?
        
        dlist                   >= 0.5,
        
        parsec                  >= 3.1.3,
        --Safe                    >= 0.1,
        bytestring              >= 0.10.0.0,
        primitive               >= 0.4.1,
        --split                   >= 0.2.1.1,
        list-extras             >= 0.4.1,
        containers              >= 0.5,
        statistics              >= 0.10.2,
        
        QuickCheck              >= 2.5.1,
        vector                  >= 0.9,
        vector-th-unbox         >= 0.1,
        
        MonadRandom             >= 0.1.6,
        logfloat                >= 0.12.0,
        math-functions          >= 0.1.1,
        normaldistribution      >= 1.1.0,
        deepseq                 >= 1.3.0,
        hashable                >= 1.1.2.5,
        binary                  >= 0.5.1
        
    hs-source-dirs:     src
    ghc-options:        
        -rtsopts 
        -- -auto-all 
        -- -caf-all 
        -funbox-strict-fields
        -O2 
        -- -fllvm
    Exposed-modules:
        HLearn.Models.Classifiers
        HLearn.Models.Classifiers.Common
        HLearn.Models.Classifiers.Bayes
        --HLearn.Models.Classifiers.NearestNeighbor
        HLearn.Models.Classifiers.Perceptron
        --HLearn.Models.Classifiers.Experimental.Boosting.MonoidBoost
        HLearn.Evaluation.CrossValidation