name: HLearn-classification
version: 1.0.0
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: ""
maintainer: mike@izbicki.me
homepage: http://github.com/mikeizbicki/HLearn/
bug-reports: http://github.com/mikeizbicki/HLearn/issues
description: This module is for unsupervised, supervised, and semi-supervised classification tasks.  It is in desperate need of documentation and refactoring.
category: Data Mining, Machine Learning
author: Mike izbicki
data-dir: ""
 
library
    build-depends: base >=3 && <5, HLearn-algebra >=1.0.0,
                   HLearn-distributions >=1.0.0, ConstraintKinds >=0.0.1, dlist >=0.5,
                   parsec >=3.1.3, bytestring >=0.10.0.0, primitive >=0.4.1,
                   list-extras >=0.4.1, containers >=0.5, statistics >=0.10.2,
                   QuickCheck >=2.5.1, vector >=0.9, vector-th-unbox >=0.1,
                   MonadRandom >=0.1.6, logfloat >=0.12.0, math-functions >=0.1.1,
                   normaldistribution >=1.1.0, deepseq >=1.3.0, hashable >=1.1.2.5,
                   binary >=0.5.1
    exposed-modules: HLearn.Models.Regression.Exponential
                     HLearn.Models.Classifiers HLearn.Models.Classifiers.Common
                     HLearn.Models.Classifiers.Bayes
                     HLearn.Models.Classifiers.NearestNeighbor
                     HLearn.Models.Classifiers.Perceptron
                     HLearn.Models.Classifiers.Centroid
                     HLearn.Models.Classifiers.Experimental.Boosting.FiniteBoost
                     HLearn.Models.Classifiers.Experimental.Boosting.MonoidBoost
                     HLearn.Models.Regression.PowerLaw HLearn.Evaluation.CrossValidation
                     HLearn.Evaluation.RSquared
    exposed: True
    buildable: True
    extensions: FlexibleInstances FlexibleContexts
                MultiParamTypeClasses FunctionalDependencies UndecidableInstances
                ScopedTypeVariables BangPatterns TypeOperators
                GeneralizedNewtypeDeriving DataKinds TypeFamilies PolyKinds
                StandaloneDeriving GADTs KindSignatures ConstraintKinds
    hs-source-dirs: src
    ghc-options: -rtsopts -funbox-strict-fields -O2
 