Name:                HLearn-datastructures
Version:             1.0.0
Description:         This module contains commonly used data structures
Category:            Data Mining, Machine Learning, Data Structures
License:             GPL
--License-file:        LICENSE
Author:              Mike izbicki
Maintainer:          mike@izbicki.me
Build-Type:          Simple
Cabal-Version:       >=1.8

Library
    Build-Depends:      
        HLearn-algebra          >= 1.0.0,
        HLearn-distributions    >= 1.0.0,
        base                    >= 3 && < 5,
        
        vector                  >= 0.10.0,
        containers              >= 0.5.0,
        list-extras             >= 0.4.1
        
    hs-source-dirs:     src
    ghc-options:        -rtsopts -auto-all -caf-all -O2 
    Exposed-modules:
        HLearn.DataStructures.BinarySearchTree
        HLearn.NPHard.Partition
        