Name:                HLearn-datastructures
Version:             1.0.0
Description:         This package contains commonly used data structures
Category:            Data Mining, Machine Learning, Data Structures
License:             BSD3
--License-file:        LICENSE
Author:              Mike izbicki
Maintainer:          mike@izbicki.me
Build-Type:          Simple
Cabal-Version:       >=1.8

Library
    Build-Depends:      
        HLearn-algebra          >= 1.0.2,
        HLearn-distributions    >= 1.0.0,
        ConstraintKinds         >= 0.1.0,
        base                    >= 3 && < 5,

        QuickCheck              >= 2.3.1,
        MonadRandom             >= 0.1.9,

        vector                  >= 0.10.0,
        containers              >= 0.5.0,
        list-extras             >= 0.4.1
        
    hs-source-dirs:     src
    ghc-options:        -rtsopts -auto-all -caf-all -O2 
    Exposed-modules:
        HLearn.DataStructures.SortedVector
        --HLearn.DataStructures.KDTree
    Extensions:
        FlexibleInstances
        FlexibleContexts
        MultiParamTypeClasses
        FunctionalDependencies
        UndecidableInstances
        ScopedTypeVariables
        BangPatterns
        TypeOperators
        GeneralizedNewtypeDeriving
--        DataKinds
        TypeFamilies
--        PolyKinds
        StandaloneDeriving
        GADTs
        KindSignatures
        ConstraintKinds
--        MultiWayIf
