Name:                HLearn-datastructures
Version:             1.2.0
Description:         This package contains commonly used data structures
Category:            Data Mining, Machine Learning, Data Structures
License:             BSD3
--License-file:        LICENSE
Author:              Mike izbicki
Maintainer:          mike@izbicki.me
Build-Type:          Simple
Cabal-Version:       >=1.8

extra-source-files:
    src/HLearn/DataStructures/BitTwiddlerSort/BitTwiddlerSort.c
    src/HLearn/DataStructures/BitTwiddlerSort/BitTwiddlerSort.h

Library
    Build-Depends:      
        HLearn-algebra          >= 1.1.0,
        --HLearn-distributions    >= 1.0.0,
        ConstraintKinds         >= 0.2.0,
        base                    >= 3 && < 5,

        diagrams-svg,
        diagrams-lib,

        vector-th-unbox         >= 0.2,
        bits                    >= 0.3.2,
        vector-algorithms       >= 0.5.4,
        primitive               >= 0.5,
        HUnit                   >= 1.2,
        QuickCheck              >= 2.3.1,
        MonadRandom             >= 0.1.9,
        deepseq                 >= 1.3,
        vector                  >= 0.10.0,
        containers              >= 0.5.0,
        list-extras             >= 0.4.1
        
    c-sources:
        src/HLearn/DataStructures/BitTwiddlerSort/BitTwiddlerSort.c

    hs-source-dirs:     
        src
    ghc-options:        
        -rtsopts 
        -auto-all 
        -caf-all 
        -O2 
    Exposed-modules:
        Data.Prunable
        Data.BitTwiddler
        HLearn.DataStructures.SortedVector
        HLearn.DataStructures.CoverTree
        HLearn.DataStructures.KDTree
        HLearn.DataStructures.KDIsomorphism
        HLearn.DataStructures.BitTwiddlerSort.BitTwiddler
        HLearn.DataStructures.FourD
    Extensions:
        FlexibleInstances
        FlexibleContexts
        MultiParamTypeClasses
        FunctionalDependencies
        UndecidableInstances
        ScopedTypeVariables
        BangPatterns
        TypeOperators
        GeneralizedNewtypeDeriving
--        DataKinds
        TypeFamilies
--        PolyKinds
        StandaloneDeriving
        GADTs
        KindSignatures
        ConstraintKinds
--        MultiWayIf
