Name:                HLearn-distributions
Version:             0.0.1
Description:         This module is used to estimate statistical distributions from data.  The focus is a clean interface inspired by algebra.
Category:            Data Mining
License:             GPL
--License-file:        LICENSE
Author:              Mike izbicki
Maintainer:          mike@izbicki.me
Build-Type:          Simple
Cabal-Version:       >=1.8

Executable HLearn-Distributions-Criterion
    Main-is: src/examples/Criterion.hs
    Build-Depends:      
        HLearn-algebra              >= 0.0.1,
        --HLearn-algebra              ,
        ConstraintKinds,
        
        HLearn-distributions        ,
        base                        >= 3 && < 5,
        criterion                   >= 0.6.1.1,
        parallel,
        vector,
        logfloat                , 
        statistics
    ghc-options: 
        -threaded
        -rtsopts 
        -O2 
        -funbox-strict-fields
        -- -fllvm
        
Library
    Build-Depends:      
        --HLearn-algebra          >= 0.0.1,
        HLearn-algebra          ,
        base                    >= 3 && < 5,
        list-extras             >= 0.4.1,
        containers              >= 0.5,
        statistics              >= 0.10.2,
        
        QuickCheck              >= 2.5.1,
        vector                  >= 0.9,
        vector-th-unbox         >= 0.1,
        
        -- are these really necessary?
        MonadRandom             >= 0.1.6,
        logfloat                >= 0.12.0,
        math-functions          >= 0.1.1,
        normaldistribution      >= 1.1.0

        
    hs-source-dirs:     src
    ghc-options:        
        -rtsopts 
        -- -auto-all 
        -- -caf-all 
        -funbox-strict-fields
        -O2 
        -- -fllvm
    Exposed-modules:
        HLearn.Models.Distributions
        HLearn.Models.Distributions.Common
        HLearn.Models.Distributions.Categorical
        HLearn.Models.Distributions.Gaussian
        --HLearn.Models.Distributions.GaussianOld
        --HLearn.Models.Distributions.GaussianOld2
        --HLearn.Models.Distributions.Poisson
        