Name:                HLearn-distributions
Version:             0.2.2.1
Synopsis:            Distributions for use with the HLearn library
Description:         This module is used to estimate statistical distributions from data.  The focus is a clean interface inspired by algebra.
Category:            Data Mining, Machine Learning, Statistics
License:             GPL
--License-file:        LICENSE
Author:              Mike izbicki
Maintainer:          mike@izbicki.me
Build-Type:          Simple
Cabal-Version:       >=1.8
homepage:            http://github.com/mikeizbicki/HLearn/
bug-reports:         http://github.com/mikeizbicki/HLearn/issues

Executable HLearn-Distributions-Criterion
    Main-is: src/examples/Criterion.hs
    Build-Depends:      
        HLearn-algebra              >= 0.0.1,
        ConstraintKinds             >= 0.0.1,
        HLearn-distributions        >= 0.0.1,
        
        base                        >= 3 && < 5,
        criterion                   >= 0.6.1.1,
        vector,
--        logfloat                , 
        statistics
    ghc-options: 
        -threaded
        -rtsopts 
        -O2 
        -funbox-strict-fields
        -- -prof
        -- -fllvm

Executable HLearn-Distributions-SpaceTests
    Main-is: src/examples/SpaceTests.hs
    Build-Depends:      
        HLearn-algebra              >= 0.0.1,
        --HLearn-algebra              ,
        ConstraintKinds,
        
        HLearn-distributions        ,
        base                        >= 3 && < 5,
        criterion                   >= 0.6.1.1,
        vector,
        logfloat                , 
        statistics
    ghc-options: 
        -threaded
        -rtsopts 
        -O2 
        -funbox-strict-fields
        --enable-executable-profiling
        -- -prof
        -- -fllvm

Library
    Build-Depends:      
        HLearn-algebra          >= 0.1.2,
        ConstraintKinds         >= 0.0.1,
        base                    >= 3 && < 5,
        
        deepseq                 >= 1.3.0.1,
        list-extras             >= 0.4.1,
        containers              >= 0.5,
        statistics              >= 0.10.2,
        
        QuickCheck              >= 2.5.1,
        vector                  >= 0.9,
        vector-th-unbox         >= 0.2,
        
        -- are these really necessary?
        process                 >= 1.1.0.2,
        MonadRandom             >= 0.1.6,
        math-functions          >= 0.1.1,
        normaldistribution      >= 1.1.0

        
    hs-source-dirs:     src
    ghc-options:        
        -rtsopts 
        -- -auto-all 
        -- -caf-all 
        -funbox-strict-fields
        -O2 
        -- -fllvm
    Exposed-modules:
        HLearn.Gnuplot.Distributions
        HLearn.Models.Distributions
        HLearn.Models.Distributions.Common
        HLearn.Models.Distributions.Categorical
        HLearn.Models.Distributions.KernelDensityEstimator
        HLearn.Models.Distributions.KernelDensityEstimator.Kernels
        HLearn.Models.Distributions.Moments
        HLearn.Models.Distributions.Multivariate
        --HLearn.Models.Distributions.Normal
        HLearn.Models.Distributions.Gaussian
        --HLearn.Models.Distributions.GaussianOld
        --HLearn.Models.Distributions.GaussianOld2
        --HLearn.Models.Distributions.Poisson
        