Name:                HLearn-evaluation
Version:             0.0.1
Synopsis:            Measuring the performance of HLearn's models
Description:         This module contains routines for testing the performance of a model.
Category:            Data Mining, Machine Learning
License:             GPL
--License-file:        LICENSE
Author:              Mike izbicki
Maintainer:          mike@izbicki.me
Build-Type:          Simple
Cabal-Version:       >=1.8

Library
    Build-Depends:      
        HLearn-algebra          >= 0.0.1,
        HLearn-distributions    >= 0.0.1,
        base                    >= 3 && < 5,
        ConstraintKinds         >= 0.0.1
    hs-source-dirs:     src
    ghc-options:        -rtsopts -auto-all -caf-all -O2 
    Exposed-modules:
        HLearn.Evaluation.CrossValidation