Name:                HLearn-markov
Version:             0.0.1
Description:         This module is used to represent Markov models.
Category:            Data Mining
License:             GPL
--License-file:        LICENSE
Author:              Mike izbicki
Maintainer:          mike@izbicki.me
Build-Type:          Simple
Cabal-Version:       >=1.8

Library
    Build-Depends:      
        --HLearn-algebra          >= 0.0.1,
        HLearn-algebra          ,
        HLearn-distributions    ,
        base                    >= 3 && < 5
        
    hs-source-dirs:     src
    ghc-options:        -rtsopts -auto-all -caf-all -O2 
    Exposed-modules:
        HLearn.Models.Markov.MarkovChain
        