Name:                HLearn-markov
Version:             1.0.0
Description:         This module is used to represent Markov models.
Category:            Data Mining
License:             BSD3
--License-file:        LICENSE
Author:              Mike izbicki
Maintainer:          mike@izbicki.me
Build-Type:          Simple
Cabal-Version:       >=1.8

Library
    Build-Depends:      
        --HLearn-algebra          >= 0.0.1,
        HLearn-algebra          ,
        HLearn-distributions    ,
        base                    >= 3 && < 5,
        MonadRandom             >= 0.1.8,
        deepseq                 >= 1.3,
        vector                  >= 0.10,
        logfloat                >=0.12
        
    hs-source-dirs:     src
    ghc-options:        -rtsopts -auto-all -caf-all -O2 
    Exposed-modules:
        HLearn.Models.Markov.MarkovChain
    Extensions:
        FlexibleInstances
        FlexibleContexts
        MultiParamTypeClasses
        FunctionalDependencies
        UndecidableInstances
        ScopedTypeVariables
        BangPatterns
        TypeOperators
        GeneralizedNewtypeDeriving
        DataKinds
        TypeFamilies
        PolyKinds
        StandaloneDeriving
        GADTs
        KindSignatures
        ConstraintKinds